--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        pip_version: ["21.3.1", "22.0", "22.0.1", "22.0.2"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -29,7 +33,7 @@ jobs:
 
       - name: Install dependencies
         run: | 
-          python -m pip install pip==21.3.1
+          python -m pip install pip==${{ matrix.pip_version }}
           pip install papermill ipykernel papermill-nb-runner
       
       - name: Make dir
@@ -44,34 +48,3 @@ jobs:
           name: output-ipynb
           path: /tmp/ipynb
   
-  build2:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      - name: Set up Python 
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.10.0'
-
-      - name: Install dependencies
-        run: | 
-          python -m pip install pip==22.0.2
-          pip install papermill ipykernel papermill-nb-runner
-      
-      - name: Make dir
-        run: mkdir /tmp/ipynb
-
-      - name: Analyze  Data
-        run: papermill test.ipynb /tmp/ipynb/test.ipynb -p ci "true"
-
-      - uses: actions/upload-artifact@master
-        if: always()
-        with:
-          name: output-ipynb
-          path: /tmp/ipynb
-        
